fixed grid columns to prevent overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,5 @@
 /*Shadows*/
 nav {
-  height: 12rem;
   background-color: #000; }
 
 .sub-heading {
@@ -27,9 +26,8 @@ h1 {
 nav ul a {
   font-size: 1rem; }
 
-.brand-logo {
-  font-family: 'Jua', 'sans-serif';
-  font-size: 2.5rem; }
+nav .brand-logo {
+  font-family: 'Jua', 'sans-serif'; }
 
 i.medium {
   font-size: 2rem; }
